Add lemma about conservation of weakly streamlining by \fris

--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -131,4 +131,6 @@ Since $\psi$ is connected, the mapping from occurrences of $a^\psi$ and $\bar a^
 \]
 \end{proof}
 
-\TODO{Add Lemata similar to the ones in the section on Four Boxes.}
+\begin{lemma}
+Given a polarity assignment $\pi$, and two atomic flows $\phi$ and $\psi$ such that $\phi\to_\fris\psi$ and $\phi$ is weakly streamlined with respect to $\pi$ then $\psi$ is weakly streamlined with respect to $\pi$.
+\end{lemma}
