Added remark about substituting units into threshold formulae

--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -537,6 +537,13 @@ The formulae for threshold functions adopted in \cite{AtseGalePudl:02:Monotone:y
 For $n>0$, we have $\th1n\avec1n=\vls[a_1.\vldots.a_n]$ and $\th nn\avec1n=\vls(a_1.\vldots.a_n)$.
 \end{remark}
 
+
+\TODO{Read again:}
+%-------------------------------------------------------------------------------
+\begin{remark}
+Given a threshold formula $\th kn\avec1n$ and an atom $a_i$, both $\th kn\avec1n\{a_i/\fff\}$ and $\th kn\avec 1n\{a_i/\ttt\}$ are threshold formula as well. In particular, $\th kn\avec1n\{a_i/\fff\}$ (resp., $\th kn\avec 1n\{a_i/\ttt\}$) is true if and only if at least $k$ (resp., $k-1$) of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are true.
+\end{remark}
+
 The size of the threshold formulae dominates the cost of the normalisation procedure, so, we evaluate their size. We leave as an exercise the proof of the following proposition.
 
 %-------------------------------------------------------------------------------
