--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -1052,7 +1052,31 @@ For any $n>0$ and $k\ge0$, the derivation\/ $\vlsmash{\Gth k{}n\avec1n}$ has sha
 and\/ $\size{\Gth k{}n\avec1n}$ is $n^{\Ord{\log n}}$.
 \end{theorem}
 
-\TODO{Check correctness and integrate into the rest a bit better. Also find the correct place for it (before/after the definition of the class of threshold formulae we use (as is, it expects to be after)).}
+
+\newcommand{\frqmis}{{\mathsf{qmis}}}
+%---------------------------------------
+\begin{definition}\label{DefQMulIsoSubRem}
+We define the reduction $\to_\frqmis$ (where $\frqmis$ stands for \emph{quasipolynomial multiple isolated subflows}) as follows,
+Let $\avec 1n$ be any atoms, then, for $1\le k\le n$, instantiate $\to_\frmis$ with
+\begin{itemize}
+\item the atomic flow of $\Gamma_k\avec 1n$ for $\gamma_k$, and
+\item one copy of $\psi_i$ for every atom occurrence of $\th kn\avec 1n\{a_i/\fff\}$.
+\end{itemize}
+\end{definition}
+
+\begin{theorem}
+$\to_\frqmis$ is sound.
+\end{theorem}
+
+\begin{proof}
+
+\end{proof}
+
+\TODO{Rephrase:}
+
+\begin{theorem}
+$\to_\frqmis$ is quasipolynomial.
+\end{theorem}
 
 \TODO{Add a few words to the effect: `We have now seen that threshold formulae do the job, but do we HAVE to use threshold formulae?'}
 
