--- a/flows.tex
+++ b/flows.tex
@@ -322,3 +322,5 @@ Consider the following atomic flow:
 \afnegspace
 The flow contains two $\ai$-cycles: $\one,\four,\five,\six,\seven,\two$ and $\one,\three,\eight,\two$. The first $\ai$-cycle contains the two simple edges $\five$ and $\six$, so it is a fragile cycle; the second $\ai$-cycle does not contain any simple edge. Note that the two $\ai$-cycles are `overlapping', in the sense that edges $\one$ and $\two$ belong to both.
 \end{example}
+
+\TODO{Isomorphism}
